--- a/merny_front/src/App.css
+++ b/merny_front/src/App.css
@@ -1,3 +1,9 @@
+header {
+background-color: rgb(246, 166, 66);
+/*min-width: 376px;*/
+width: 800px;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
