--- a/merny_front/src/App.css
+++ b/merny_front/src/App.css
@@ -1,37 +1,9 @@
 header {
 background-color: rgb(246, 166, 66);
 /*min-width: 376px;*/
-width: 800px;
+width: 100%;
 }
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
@@ -41,6 +13,11 @@ width: 800px;
 
 .card {
   padding: 2em;
+}
+
+.cardSmall{
+  background-color: rgb(106, 16, 46);
+  
 }
 
 .read-the-docs {
